# chess-manager-cli-python

./: Pipfile  Readme.md  chess.bat  chess.ps1  commands.md  main.py  pyproject.toml  requirements.txt
chess_manager_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
data/: active_tournament.json  admins.json  session.json  tournament.json
data/tournaments/: T002.json
models/: __init__.py  admin.py  match.py  person.py  player.py  tournament.py
tests/: __init__.py  conftest.py  test_auth.py  test_console_theme.py  test_main_cli.py  test_pairing.py  test_persistence.py  test_player.py  test_standings.py
utils/: __init__.py  auth.py  console_theme.py  pairing.py  persistence.py  standings.py
