[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-manager-cli"
version = "1.0.0"
description = "Chess Tournament Manager CLI"
readme = "Readme.md"
requires-python = ">=3.14"
dependencies = [
    "rich>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[project.scripts]
chess = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "utils*"]
